Fix hidden modal dialog due to too little z-index
* refs #81

--- a/src/main/webapp/css/main.css
+++ b/src/main/webapp/css/main.css
@@ -31,7 +31,8 @@ body {
 }
 
 .modal-dialog {
-  margin-top: 77px;
+    margin-top: 77px;
+    z-index: 2000;
 }
 
 hr {
